change img attribute to span with background-image in css

--- a/style/_functions.scss
+++ b/style/_functions.scss
@@ -3,7 +3,7 @@
     padding: 1em;
     font-size: .8em;
     cursor: pointer;
-    background-color: $light-black;
+    background-color: #98C8E9;
     color: white;
     border-radius: 20px;
     transition: opacity .2s ease-in-out;
