--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@-webkit-keyframes fadeInOut {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeInOut {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes toUp {
+  0% {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes toUp {
+  0% {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
 body {
   font-size: 16px;
   font-family: Roboto, sans-serif;
@@ -24,10 +63,13 @@ input {
 }
 
 header {
-  background-color: crimson;
+  background-image: url("/style/imgs/pexels-negative-space-160107.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  color: white;
   min-height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -42,6 +84,8 @@ header {
 }
 
 header .content {
+  -webkit-animation: fadeInOut .8s ease-in-out;
+          animation: fadeInOut .8s ease-in-out;
   text-align: center;
 }
 
@@ -52,6 +96,11 @@ header .content h1 {
 
 header .content h2 {
   font-size: 2em;
+}
+
+section#about {
+  -webkit-animation: toUp 1s ease-in-out;
+          animation: toUp 1s ease-in-out;
 }
 
 section#about .content {
@@ -68,8 +117,6 @@ section#about .content .left {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
 }
 
 section#about .content .right {
@@ -79,6 +126,10 @@ section#about .content .right {
 
 section#about .content .right .container {
   padding: 1em 2.6em;
+}
+
+section#about .content .right .container h3 {
+  font-size: 1.6em;
 }
 
 section#about .content .right .container p {
@@ -91,7 +142,7 @@ section#about .content .right .container .btn {
   padding: 1em;
   font-size: .8em;
   cursor: pointer;
-  background-color: #333;
+  background-color: #98C8E9;
   color: white;
   border-radius: 20px;
   -webkit-transition: opacity .2s ease-in-out;
@@ -134,7 +185,7 @@ main .content .container {
 
 main .content a.card {
   width: 250px;
-  height: 300px;
+  height: 325px;
   text-align: center;
   margin-bottom: 2em;
   background-color: white;
@@ -155,9 +206,12 @@ main .content a.card:hover {
           transform: scale(1.1);
 }
 
-main .content a.card img {
+main .content a.card span {
   display: block;
   height: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 main .content a.card h3 {
@@ -222,7 +276,7 @@ footer .content .logo a {
     padding: 1em;
     font-size: .8em;
     cursor: pointer;
-    background-color: #333;
+    background-color: #98C8E9;
     color: white;
     border-radius: 20px;
     -webkit-transition: opacity .2s ease-in-out;
